--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,11 +4,13 @@
     box-sizing: border-box;
 }
 body{
-    background:rgb(201, 200, 200);
+    background: url(../imagenes/blue-paint-wall-background-texture.jpg);
+    background-size: 100%;
     font-family: cursive;
     position: relative;
     padding-bottom: 3rem;
     min-height: 100vh;
+    color: white;
 }
 
 .menu{
@@ -24,7 +26,8 @@ body{
 }
 
 #header{
-    background: rgb(55, 55, 177);
+    background-image: radial-gradient(circle at 120.71% 50%, #e8d3c8 0, #e5d1c3 5.56%, #e1cebc 11.11%, #dccab4 16.67%, #d5c6ac 22.22%, #cdc2a2 27.78%, #c3bd98 33.33%, #b6b78e 38.89%, #a8b183 44.44%, #97ab79 50%, #85a571 55.56%, #719f6b 61.11%, #5d9b68 66.67%, #469668 72.22%, #29926a 77.78%, #008f6e 83.33%, #008c74 88.89%, #00897b 94.44%, #008784 100%);
+    opacity: 85%;
     width: 100%;
     clear: both;
     content: '';
@@ -44,15 +47,16 @@ body{
 
 #nav ul li a{
     text-decoration: none;
+    opacity: 100%;
     font-size: larger;
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
 #nav ul li span{
     font-weight: bold;
     font-size: larger;
-    color: black;
+    color: white;
 }
 
 #nav ul li a:hover{
@@ -60,7 +64,7 @@ body{
 }
 
 #footer{
-    background: rgb(55, 55, 177);
+    background-image: radial-gradient(circle at 120.71% 50%, #e8d3c8 0, #e5d1c3 5.56%, #e1cebc 11.11%, #dccab4 16.67%, #d5c6ac 22.22%, #cdc2a2 27.78%, #c3bd98 33.33%, #b6b78e 38.89%, #a8b183 44.44%, #97ab79 50%, #85a571 55.56%, #719f6b 61.11%, #5d9b68 66.67%, #469668 72.22%, #29926a 77.78%, #008f6e 83.33%, #008c74 88.89%, #00897b 94.44%, #008784 100%);
     padding: 0;
     text-align: center;
     position: absolute;
@@ -70,4 +74,5 @@ body{
 
 #footer span{
     font-weight: bold;
+    color: white;
 }
